src/test/deca/context/valid/provided/test_class_decl.deca
class A {
   protected int x ;
   int getX() {
      return x ;
    }
 }

