src/test/deca/context/invalid/provided/access-protected-field.deca
class A{
    protected int x;
    int y;

    int getX(){
        return x;
    }

}


{
    A a = new A();
    println(a.x);
}